--- a/index.html
+++ b/index.html
@@ -4,22 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rohan personal site</title>
+    <title>My First Website</title>
 </head>
 <body>
     <table cellspacing="15">
         <td> <a href="https://www.instagram.com/ghorpaderohan69/"><img src="img/rohan-modified.png" alt="Rohan Image"></a> 
         </td>
         <td><h1>Rohan Ghorpade</h1>
-            <p><em>Funder and Ceo of <strong>Rohan & CO.</strong></em></p>
-            <p>I am Rohan. I love <a href="#">CoFfEe</a></p</td>
+            <p><em>Co-Founder and Ceo of <strong>wwww.RohanGhorpade.in</strong></em></p>
+            <p>I am Rohan. I love <a href="#">Making websites and having CoFfEe</a></p</td>
     </table>
     
     <hr size="3" noshade>
     <h3> Education</h3>
     <ul>
-        <li>BE</li>
-    <li>ME</li> 
+        <li>B.tech CS Pursuing</li>
     </ul>
 <h3>Work Experirence</h3>
     <table cellspacing="10">
@@ -50,6 +49,18 @@
    <tr>
        <td>Css</td>
        <td>&#9733;&#9733;&#9733;&#9734;&#9734;</td>
+   </tr>
+         <tr>
+       <td>Javascript</td>
+       <td>&#9733;&#9734;&#9734;&#9734;&#9734;</td>
+   </tr>
+        <tr>
+       <td>Python</td>
+       <td>&#9733;&#9734;&#9734;&#9734;&#9734;</td>
+   </tr>
+        <tr>
+       <td>Java</td>
+       <td>&#9733;&#9734;&#9734;&#9734;&#9734;</td>
    </tr>
     </table>
     </body>
